// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the snapshot changes of fields Should have no violations on the default render for empty props 1`] = `
<fieldset
  onBlur={[Function]}
>
  <label>
    value
  </label>
  <input
    aria-label="value"
    onBlur={[Function]}
    onChange={[Function]}
    value=""
  />
  <label>
    termType
  </label>
  <input
    aria-label="termType"
    onBlur={[Function]}
    onChange={[Function]}
    value="Literal"
  />
</fieldset>
`;

exports[`Testing the snapshot changes of fields Should have no violations on the default render for integer literal 1`] = `
<fieldset
  onBlur={[Function]}
>
  <label>
    value
  </label>
  <input
    aria-label="value"
    onBlur={[Function]}
    onChange={[Function]}
    value="0"
  />
  <label>
    termType
  </label>
  <input
    aria-label="termType"
    onBlur={[Function]}
    onChange={[Function]}
    value="Literal"
  />
  <label>
    datatype
  </label>
  <input
    aria-label="datatype"
    onBlur={[Function]}
    onChange={[Function]}
    value="http://www.w3.org/2001/XMLSchema#integer"
  />
</fieldset>
`;

exports[`Testing the snapshot changes of fields Should have no violations on the default render for literal 1`] = `
<fieldset
  onBlur={[Function]}
>
  <input
    aria-label="value"
    onChange={[Function]}
    type="text"
    value="Jesse"
  />
  <label>
    termType
  </label>
  <input
    aria-label="termType"
    onBlur={[Function]}
    onChange={[Function]}
    value="Jesse"
  />
  <label>
    datatype
  </label>
  <input
    aria-label="datatype"
    onBlur={[Function]}
    onChange={[Function]}
    value="Jesse"
  />
</fieldset>
`;

exports[`Testing the snapshot changes of fields Should have no violations on the default render for namedNode props + label 1`] = `
<fieldset
  onBlur={[Function]}
>
  <label>
    value
  </label>
  <input
    aria-label="value"
    onBlur={[Function]}
    onChange={[Function]}
    value="http://example.org#Jesse"
  />
  <label>
    termType
  </label>
  <input
    aria-label="termType"
    onBlur={[Function]}
    onChange={[Function]}
    value="NamedNode"
  />
  <label>
    type
  </label>
  <input
    aria-label="type"
    onBlur={[Function]}
    onChange={[Function]}
    value=""
  />
  <label>
    label
  </label>
  <input
    aria-label="label"
    onBlur={[Function]}
    onChange={[Function]}
    value=""
  />
</fieldset>
`;

exports[`Testing the snapshot changes of fields Should have no violations on the default render for namedNode props 1`] = `
<fieldset
  onBlur={[Function]}
>
  <label>
    value
  </label>
  <input
    aria-label="value"
    onBlur={[Function]}
    onChange={[Function]}
    value="http://example.org#Jesse"
  />
  <label>
    termType
  </label>
  <input
    aria-label="termType"
    onBlur={[Function]}
    onChange={[Function]}
    value="http://example.org#Jesse"
  />
  <label>
    type
  </label>
  <input
    aria-label="type"
    onBlur={[Function]}
    onChange={[Function]}
    value="http://example.org#Jesse"
  />
  <label>
    label
  </label>
  <input
    aria-label="label"
    onBlur={[Function]}
    onChange={[Function]}
    value="http://example.org#Jesse"
  />
</fieldset>
`;
